5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_1576.log
== TEST (2019-05-24 13:47:47) 
-- CODE:
e=array(eval(input("sequencia de eusapia: ")))
b=array(eval(input("sequencia de barsanulfo: ")))
print(e)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:48:50) 
-- CODE:
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
print(e)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:49:01) 
-- CODE:
e1= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
print(e)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e1= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:49:15) 
-- CODE:
e= array(eval(input(" ")))
b= array(eval(input("sequencia de barsanulfo: ")))
print(e)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:50:26) 
-- CODE:
v=array (eval(input("v: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
print(e)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=array (eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:51:10) 
-- CODE:
from numpy import*
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
print(e)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:54:28) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))




print(size(e))
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:54:58) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))




print(size(e))
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:55:12) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))




print(size(e))
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:01:52) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:02:12) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.459492
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:03:09) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.318591
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:03:17) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:03:20) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.602138
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:11:27) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ae=0
ab=0

while(i<size(e)):
	if(((e[i]==11)and(b[i]==22))or((e[i]==22)and(b[i]==33))or((e[i]==33)and(b[i]==11))):
		ab=ab+1
	elif(((e[i]==11)and(b[i]==33))or((e[i]==22)and(b[i]==11))or((e[i]==33)and(b[i]==22))):
		ae=ae+1
	
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ae=ae+0
		ab=ab+0
	i=i+1	
print(size(e))
if(ae>ab):
	print("EUSAPIA")
elif(ab>ae):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:14:08) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ae=0
ab=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22))or((e[i]==22)and(b[i]==33))or((e[i]==33)and(b[i]==11)):
		ab=ab+1
	elif((e[i]==11)and(b[i]==33))or((e[i]==22)and(b[i]==11))or((e[i]==33)and(b[i]==22)):
		ae=ae+1
	
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ae=ae+0
		ab=ab+0
	i=i+1	
print(size(e))
if(ae>ab):
	print("EUSAPIA")
elif(ab>ae):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.520733
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:14:09) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ae=0
ab=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22))or((e[i]==22)and(b[i]==33))or((e[i]==33)and(b[i]==11)):
		ab=ab+1
	elif((e[i]==11)and(b[i]==33))or((e[i]==22)and(b[i]==11))or((e[i]==33)and(b[i]==22)):
		ae=ae+1
	
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ae=ae+0
		ab=ab+0
	i=i+1	
print(size(e))
if(ae>ab):
	print("EUSAPIA")
elif(ab>ae):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:14:29) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ae=0
ab=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22))or((e[i]==22)and(b[i]==33))or((e[i]==33)and(b[i]==11)):
		ab=ab+1
	elif((e[i]==11)and(b[i]==33))or((e[i]==22)and(b[i]==11))or((e[i]==33)and(b[i]==22)):
		ae=ae+1
	
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ae=ae+0
		ab=ab+0
	i=i+1	
print(size(e))
if(ae>ab):
	print("EUSAPIA")
elif(ab>ae):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:15:55) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)h):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.12904
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 10
    if((e[i]==11)and(b[i]==22)h):
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:16:00) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:16:03) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.569534
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:42:28) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.458301
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:42:49) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
		i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:55:03) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
		i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
729.332
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:55:03) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
		i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
737.281
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:23:51) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.423514
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:34:23) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif((e[i]==11)and(b[i]==11))or((e[i]==22)and(b[i]==22))or((e[i]==33)and(b[i]==33)):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:00:14) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif(ce[i]==cb[i]):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.388443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1576/main.py", line 22, in <module>
    elif(ce[i]==cb[i]):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:00:38) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif(ce[i] == cb[i]):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.522435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1576/main.py", line 22, in <module>
    elif(ce[i] == cb[i]):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:01:41) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif(e[i]==c[i]):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.502731
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1576/main.py", line 22, in <module>
    elif(e[i]==c[i]):
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:01:59) 
-- CODE:
from numpy import*
#entradas: 11=pedra, 22=papel, 33=tesoura
e= array(eval(input("sequencia de eusapia: ")))
b= array(eval(input("sequencia de barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		cb=cb+1
	elif((e[i]==11)and(b[i]==33)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==11)):
		cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		ce=ce+1
	elif(e[i]==b[i]):
		ce=ce+0
		cb=cb+0
	i=i+1	
print(size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
	


-- EXECUTION TIME:
0.462763
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
